service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp
  namespace: fast-platform
  labels:
    platform: fast
    module: dev
    app: file-server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    platform: fast
    module: dev
    app: file-server
  type: ClusterIP
