ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: file-server
  namespace: fast-platform
  labels:
    platform: fast
    module: dev
    app: file-server
spec:
  rules:
  - host: ftp.fast.sobloo.io
    http:
      paths:
      - backend:
          serviceName: ftp
          servicePort: http
        path: /
